# jipdate

./: .gitignore  LICENSE  README.md  cfg.py  config.yml  fp.py  helper.py  jipdate  jipdate.py  jipstatus.py  jiralogin.py  pyproject.toml  requirements.txt  status_update.txt
.github/workflows/: jipdate-pipeline.yml
docs/: Makefile  about.rst  conf.py  config.rst  examples.rst  index.rst  install.rst  jipcreate.rst  jipdate.rst  jipstatus.rst  problems.rst  run.rst
jipdate/: __init__.py  cfg.py  jipcreate.py  jipdate.py  jipfp.py  jipsearch.py  jipstatus.py  jiralogin.py
